testsuite/tests/rename/should_compile/rn060.hs
{-# OPTIONS_GHC -Wno-compat-unqualified-imports #-}

module Foo (module Data.List) where

import Data.List
import Data.List as Foo

